<resources>
    <string name="app_name">Foody_7</string>

    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmarks</string>
    <string name="title_note">Notice</string>
    <string name="title_account">Account</string>
    <string name="title_Search">Search meals, location, restaurant</string>
    <string name="title_Location">Location</string>
<!--    Account fragment-->

    <string name="title_payment">Payment</string>
    <string name="title_history">History</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_policy">Policy</string>
    <string name="title_Signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_accept">Accept</string>
    <string name="userName">User Name</string>
    <string name="title_product">Product</string>
    <string name="remember">Ghi nhớ đăng nhập</string>
    <string name="nameProduct">name product</string>
    <string name="Quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="title_cart">Cart</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="nameStore">Name store</string>
    <string name="addressStore">Address:</string>
    <string name="food_image">Image food</string>
    <string name="add_product">Add product to cart</string>
    <!--Home fragment-->

</resources>