<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".Activity.SignUpActivity">




    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:divider="@drawable/divider"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/title_Signup"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="@dimen/textField"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"

            android:textSize="@dimen/CustomText" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="@dimen/textField"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/CustomText" />

        <EditText
            android:id="@+id/txtCfrmPass"
            android:layout_width="@dimen/textField"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="@dimen/CustomText" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="150dp"
            android:background="@drawable/button_define"
            android:layout_height="wrap_content"
            android:text="@string/title_accept"
            android:textSize="@dimen/CustomText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>