<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <ImageView

            android:layout_marginRight="16dp"
            android:src="@mipmap/cart_image"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/cart_image"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cart_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/nameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/Quantity"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/cart_btn_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:layout_marginRight="16dp"
                    android:text="@string/minus"
                    android:textColor="#607D8B"
                    android:textSize="15sp"
                    android:textStyle="normal|bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_marginRight="16dp"
                    android:inputType="none"
                    android:id="@+id/cart_quantity"
                    android:text="1"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/cart_btn_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/plus"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:layout_weight="2"
                    android:text="0"
                    android:textColor="#D32F2F"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#D32F2F"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="unit" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>