<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:background="@color/colorBackgroundDark"
    android:gravity="center"
    tools:context=".Fragment.AccountFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:showDividers="middle"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="20dp"
            android:background="@color/red">

            <ImageView
                android:id="@+id/login_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_account" />

            <TextView
                android:id="@+id/text_login_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/CustomText"
                android:textColor="@color/black"
                android:gravity="bottom"
                android:text="@string/title_account" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/payment_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_payment" />

            <TextView
                android:id="@+id/payment_text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/CustomText"
                android:textColor="@color/black"

                android:gravity="bottom"
                android:text="@string/title_payment" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/history_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_history" />

            <TextView
                android:id="@+id/history_text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/CustomText"
                android:textColor="@color/black"

                android:gravity="bottom"
                android:text="@string/title_history" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/invoice_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_invoice" />

            <TextView
                android:id="@+id/invoice_text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/CustomText"
                android:textColor="@color/black"

                android:gravity="bottom"
                android:text="@string/title_invoice" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/policy_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_book" />

            <TextView
                android:id="@+id/policy_text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/CustomText"
                android:textColor="@color/black"
                android:gravity="bottom"
                android:text="@string/title_policy" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>