<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:gravity="center"
            android:text="@string/add_product"
            android:textSize="@dimen/size_title_cart">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="MissingConstraints">

            <ImageView

                android:id="@+id/cart_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitXY"

                android:src="@mipmap/cart_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nameProduct"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/Quantity" />

                    <Button
                        android:id="@+id/cart_btn_minus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"

                        android:layout_marginRight="16dp"
                        android:text="@string/minus"
                        android:textColor="#607D8B"
                        android:textSize="15sp"
                        android:textStyle="normal|bold"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/cart_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:inputType="none"
                        android:text="1" />

                    <Button
                        android:id="@+id/cart_btn_plus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/plus"
                        android:textSize="15sp"
                        tools:ignore="TouchTargetSizeCheck" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cart_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingStart="8dp"
                        android:text="0"
                        android:textColor="#D32F2F"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="unit"
                        android:textColor="#D32F2F"
                        android:textSize="20sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>