<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProductActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnTurnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@color/Transparent"
            app:layout_anchor="@+id/button"
            app:layout_anchorGravity="end|bottom" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/store_image"
                android:layout_width="300dp"
                android:layout_height="208dp"
                android:layout_gravity="center" />
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/txtNameStore"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:fontFamily="sans-serif"
                  android:layout_marginTop="@dimen/fab_margin"
                  android:layout_marginBottom="@dimen/fab_margin"
                  android:gravity="center"
                  android:text="@string/nameStore"
                  android:textSize="@dimen/CustomText" />

          </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:text="@string/addressStore" />
                <TextView
                    android:id="@+id/store_location"
                    android:layout_width="0dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                   />

            </LinearLayout>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>